=== actuar: an R package for Actuarial Science ===

Version 1.0-0
=============

NEW FEATURES

  o plot method for function objects returned by ruin().


Version 0.9-6
=============

Accented letters in comments removed to avoid compilation problems
under MacOS X on CRAN (see thread starting at
https://stat.ethz.ch/pipermail/r-devel/2008-February/048391.html).


Version 0.9-5
=============

Mostly bug fix release, along with a few improvements.

NEW FEATURES

  o New "simulation" vignette on usage of function simul(). Most of
    the material was previously in the "credibility" vignette.

  o Examples of ruin() and adjCoef() added to the "risk" demo.

USER-VISIBLE CHANGES

  o Following some negative comments on a function name VG had been
    using for years, function simpf() is renamed to simul() and the
    class of the output from 'simpf' to 'portfolio'.

  o The components of the list returned by severity.portfolio() are
    renamed from "first" and "last" to "main" and "split",
    respectively.

BUG FIXES

  o levinvgauss() returned wrong results.

  o Restructuring of the weights matrix in simpf() may fail with an
    incorrect number of columns.

  o Fixed index entry of the credibility theory vignette.

  o adjCoef() would only accept as argument 'h' a function named 'h'.

  o ruin() built incorrect probability vector and intensity matrix for
    mixture of Erlangs.

  o CTE.aggregateDist sometimes gave values smaller than the VaR for
    recursive and simulation methods.


Version 0.9-4
=============

Maintenance and new features release.

NEW FEATURES -- LOSS DISTRIBUTIONS

  o Functions mgffoo() to compute the moment (or cumulant if 'log =
    TRUE') generating function of the following distributions:
    chi-square, exponential, gamma, inverse gaussian (from package
    SuppDists), inverse gamma, normal, uniform and phase-type (see
    below).

  o Functions mfoo() to compute the raw moments of all the probability